--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul id="nav-bar">
                 <li>Home</li>
                 <li>Menu</li>
-                <li>About us</li>
+                <li>About-us</li>
                 <li>Contact</li>
             </ul> 
         </nav>
