--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>QuickBite</title>
+
+    <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
 </head>
 <body>
     <main>
         <div id="welcome-section">
             <div class="content">
-                <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-big-no-fill.svg">
-                <p>Welcome to <span id="logo">QuickBite</span>, here, we do things a little differently...</p>
+                <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-small-no-fill.svg">
+                <p>Welcome to <span id="logo">QuickBite</span>!<br>Here, we do things a little differently...</p>
+                <a href="#logo-small"><img class="button" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg"></a>
             </div>
         </div>
         <nav>
