--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="nav-line"></div>
             </div>
             <ul id="nav-bar">
-                <li><p class="active"><a href="welcome-section">Home</a></p></li>
+                <li><p class="active-alt"><a href="welcome-section">Home</a></p></li>
                 <li><p><a href="welcome-section">Menu</a></p></li>
                 <li><p><a href="welcome-section">About-us</a></p></li>
                 <li><p><a href="welcome-section">Contact</a></p></li>
