--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="nav-line"></div>
             </div>
             <ul id="nav-bar">
-                <li><p class="active-alt"><a href="welcome-section">Home</a></p></li>
+                <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
                 <li><p><a href="welcome-section">Menu</a></p></li>
                 <li><p><a href="welcome-section">About-us</a></p></li>
                 <li><p><a href="welcome-section">Contact</a></p></li>
@@ -58,9 +58,9 @@
             <ul>
                 <li>
                     <h2>Food so nutritious mother-nature wants it back.</h2>
-                    <h3>QuickBite is food!</h3>
+                    <h3><span class="logo-text">QuickBite</span> is food!</h3>
                     <p>
-                        At QuickBite we have decided to reimagine what fast food is.<br>
+                        At <span class="logo-text">QuickBite</span> we have decided to reimagine what fast food is.<br>
                         We pride ourselves on our fresh and nutritious ingredients.<br>
                         Locally sourced as often as not.<br>
                         Are goal is to make simple dishes that taste amazing and satisfy your hunger.
@@ -70,7 +70,7 @@
                     <h2>Portions big enough to feed a wild animal.</h2>
                     <h3>Portions that please!</h3>
                     <p>
-                        QuickBite is here to feed you.<br>
+                        <span class="logo-text">QuickBite</span> is here to feed you.<br>
                         We don't skimp on portion size.<br>
                         When you leave our restarant we want you to feel satisfied.<br>
                         We believe calories are your friend as long as the ingredients are healthy and nutritious.
@@ -80,7 +80,7 @@
                     <h2>We use food in our food. That means no colors, preservatives or nasty additives.</h2>
                     <h3>Your health is our wealth!</h3>
                     <p>
-                        At QuickBite we wanted to make a restaurant that we wanted to eat in.<br>
+                        At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
                         We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
                         If you don't know what an ingredient means or it's name is a bunch of numbers, you wont find it here.<br>
                         None of our sides, mains, or drinks contain sugar, or artificail sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
@@ -88,9 +88,9 @@
                 </li>
                 <li>
                     <h2>Food for one. Food for all.</h2>
-                    <h3>We are QuickBite!</h3>
+                    <h3>We are <span class="logo-text">QuickBite</span>!</h3>
                     <p>
-                        We understand that everybody is different, we understand that in todays world everybody has different dietary requirements.<br>
+                        At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
                         We never want to leave anybody out, everybody gets fed everybody leaves with a smile.<br>
                         Are menu was specially designed to have something for everyone.<br>
                         So that means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
