--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <div id="test"></div> -->
             <div class="content">
                 <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
-                <p>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</p>
+                <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
                 <span id="down-button-container">
                     <a id="down-link" href="#logo-small">
                         <img class="button" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
