--- a/index.html
+++ b/index.html
@@ -28,31 +28,32 @@
                 </span>
             </div>
         </div>
-        <nav>
-            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
-            <div id="nav-button">
-                <div class="nav-line"></div>
-                <div class="nav-line"></div>
-                <div class="nav-line"></div>
+            <nav>
+                <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+                <div id="nav-button">
+                    <div class="nav-line"></div>
+                    <div class="nav-line"></div>
+                    <div class="nav-line"></div>
+                </div>
+                <ul id="nav-bar">
+                    <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
+                    <li><p><a href="menu.html">Menu</a></p></li>
+                    <li><p><a href="welcome-section">About-us</a></p></li>
+                    <li><p><a href="welcome-section">Contact</a></p></li>
+                </ul> 
+            </nav>
+            <div id="nav-button-menu">
+                <div id="nav-menu-exit">
+                    <img src="images-and-svgs\svgs\close-bold.svg">
+                </div>
+                <ul>
+                    <li><p class="active"><a href="#welcome-section">Home</a></p></li>
+                    <li><p><a href="menu.html">Menu</a></p></li>
+                    <li><p><a href="welcome-section">About-us</a></p></li>
+                    <li><p><a href="welcome-section">Contact</a></p></li>
+                </ul>
             </div>
-            <ul id="nav-bar">
-                <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
-                <li><p><a href="welcome-section">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
-            </ul> 
-        </nav>
-        <div id="nav-button-menu">
-            <div id="nav-menu-exit">
-                <img src="images-and-svgs\svgs\close-bold.svg">
-            </div>
-            <ul>
-                <li><p class="active"><a href="index.html#restaurant-info">Home</a></p></li>
-                <li><p><a href="welcome-section">Menu</a></p></li>
-                <li><p><a href="welcome-section">About-us</a></p></li>
-                <li><p><a href="welcome-section">Contact</a></p></li>
-            </ul>
-        </div>
+        
         <div class="content" id="restaurant-info">
             <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
             <ul>
