menu layout started

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QuickBite</title>
 
     <link rel="icon" type="image/x-icon" href="images-and-svgs\svgs\QuickBite-favicon.svg">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
@@ -83,7 +83,7 @@
                     <p>
                         At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
                         We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
-                        If you don't know what an ingredient means or it's name is a bunch of numbers, you wont find it here.<br>
+                        If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here.<br>
                         None of our sides, mains, or drinks contain sugar, or artificail sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
                     </p>
                 </li>
@@ -92,7 +92,7 @@
                     <h3>We are <span class="logo-text">QuickBite</span>!</h3>
                     <p>
                         At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
-                        We never want to leave anybody out, everybody gets fed everybody leaves with a smile.<br>
+                        We never want to leave anybody out, everybody gets fed, everybody leaves with a smile.<br>
                         Are menu was specially designed to have something for everyone.<br>
                         So that means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
                         And that also means if you are a celiac or lactose intolarent, there's something for you too!
