Menu html and css

--- a/index.html
+++ b/index.html
@@ -10,50 +10,46 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
 
     <script src="app.js" defer></script>
 </head>
 <body>
     <main>
-        <div id="welcome-section">
-        <!-- <div id="test"></div> -->
-            <div class="content">
-                <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
-                <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
-                <span id="down-button-container">
-                    <a id="down-link" href="#logo-small">
-                        <img class="button" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
-                    </a>
-                </span>
-            </div>
+        <div id="welcome-section" class="content">
+            <img id="hero-image" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
+            <span id="down-button-container">
+                <a id="down-link" href="#logo-small">
+                    <img class="button" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
+                </a>
+            </span>
         </div>
-            <nav>
-                <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
-                <div id="nav-button">
-                    <div class="nav-line"></div>
-                    <div class="nav-line"></div>
-                    <div class="nav-line"></div>
-                </div>
-                <ul id="nav-bar">
-                    <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
-                    <li><p><a href="menu.html">Menu</a></p></li>
-                    <li><p><a href="welcome-section">About-us</a></p></li>
-                    <li><p><a href="welcome-section">Contact</a></p></li>
-                </ul> 
-            </nav>
-            <div id="nav-button-menu">
-                <div id="nav-menu-exit">
-                    <img src="images-and-svgs\svgs\close-bold.svg">
-                </div>
-                <ul>
-                    <li><p class="active"><a href="#welcome-section">Home</a></p></li>
-                    <li><p><a href="menu.html">Menu</a></p></li>
-                    <li><p><a href="welcome-section">About-us</a></p></li>
-                    <li><p><a href="welcome-section">Contact</a></p></li>
-                </ul>
+        <nav>
+            <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-red-no-fill-whiteteeth.svg">
+             <div id="nav-button">
+                <div class="nav-line"></div>
+                <div class="nav-line"></div>
+                <div class="nav-line"></div>
             </div>
-        
+            <ul id="nav-bar">
+                <li><p class="active-alt"><a href="#welcome-section">Home</a></p></li>
+                <li><p><a href="menu.html">Menu</a></p></li>
+                <li><p><a href="welcome-section">About-us</a></p></li>
+                <li><p><a href="welcome-section">Contact</a></p></li>
+            </ul> 
+        </nav>
+        <div id="nav-button-menu">
+            <div id="nav-menu-exit">
+                <img src="images-and-svgs\svgs\close-bold.svg">
+            </div>
+            <ul>
+                <li><p class="active"><a href="#welcome-section">Home</a></p></li>
+                <li><p><a href="menu.html">Menu</a></p></li>
+                <li><p><a href="welcome-section">About-us</a></p></li>
+                <li><p><a href="welcome-section">Contact</a></p></li>
+            </ul>
+        </div>
         <div class="content" id="restaurant-info">
             <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
             <ul>
