--- a/menu.html
+++ b/menu.html
@@ -18,15 +18,15 @@
 <body>
     <main>
             <nav class="alt">
-                <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-gold-no-fill-whiteteeth.svg">
+                <img id="logo-small" src="images-and-svgs\svgs\QuickBite-logo-small-red-white-alt-2.svg">
                 <div id="nav-button">
                     <div class="nav-line"></div>
                     <div class="nav-line"></div>
                     <div class="nav-line"></div>
                 </div>
                 <ul id="nav-bar">
-                    <li><p class="active-alt"><a href="index.html">Home</a></p></li>
-                    <li><p><a href="menu.html">Menu</a></p></li>
+                    <li><p ><a href="index.html">Home</a></p></li>
+                    <li><p class="active"><a href="menu.html">Menu</a></p></li>
                     <li><p><a href="welcome-section">About-us</a></p></li>
                     <li><p><a href="welcome-section">Contact</a></p></li>
                 </ul> 
@@ -42,94 +42,97 @@
                     <li><p><a href="welcome-section">Contact</a></p></li>
                 </ul>
             </div>
-            <div id="menu">
+            <div id="menu" class="content">
                 <h1>Menu</h1>
                 <ul>
-                    <li>
+                    <li class="menu-list-item">
                         <h2>Sides</h2>
+                        <p class="category-description">A choice of a side comes with each main or can be purchased individually</p>
                         <ul>
-                            <li>
-                                <h3>Fruit</h3>
-                                <p>description</p>
-                                <p>ingredients</p>
+                            <li class="individual-list-item">
+                                <h4>Fruit</h4>
+                                <p>Fresh fruit selection, gathered locally when possible. Pick any 3.</p>
+                                <p>Apple, Orange, Bananna, Pear, Strawberry.</p>
                             </li>
-                            <li>
-                                <h3>Fruit</h3>
-                                <p>description</p>
-                                <p>ingredients</p>
+                            <li class="individual-list-item">
+                                <h4>Salad</h4>
+                                <p>Fresh Salad, gathered locally when possible.</p>
+                                <p>Lettuce, tomatoe, cucumber, spinach, red onion.</p>
                             </li>
-                            <li>
-                                <h3>Fruit</h3>
-                                <p>description</p>
-                                <p>ingredients</p>
+                            <li class="individual-list-item">
+                                <h4>Chips</h4>
+                                <p>Home-made chips from fresh potatoes, seasoned with are own proprietary blend of spices and cooked in olive-oil.</p>
+                                <p>Potatoes, olive-oil, pink-salt, rosemary, onion-powder, garlic-powder, cayenne-pepper.
+                                </p>
                             </li>
-                            <li>
-                                <h3>Fruit</h3>
-                                <p>description</p>
+                            <li class="individual-list-item">
+                                <h4>Garlic Bread</h4>
+                                <p>Home-made gluten free garlic bread</p>
                                 <p>ingredients</p>
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="menu-list-item">
                         <h2>Mains</h2>
+                        <p class="category-description">description</p>
                         <ul>
-                            <li>
+                            <li class="dishtype-list-item">
                                 <h3>Burger</h3>
-                                <p>Description</p>
+                                <p class="dishtype-description">Description</p>
                                 <ul>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Chicken</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Beef</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Vegetable</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="dishtype-list-item">
                                 <h3>Toasted Sandwiches</h3>
-                                <p>Description</p>
+                                <p class="dishtype-description">Description</p>
                                 <ul>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Club</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>BLT</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Brecfast</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="dishtype-list-item">
                                 <h3>Pizza</h3>
-                                <p>Description</p>
+                                <p class="dishtype-description">Description</p>
                                 <ul>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Cheese</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Pepperoni</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
                                     </li>
-                                    <li>
+                                    <li class="individual-list-item">
                                         <h4>Hawaian</h4>
                                         <p>description</p>
                                         <p>ingredients</p>
@@ -138,10 +141,112 @@
                             </li>
                         </ul>
                     </li>
-                    <li><h2>Specials</h2></li>
-                    <li><h2>Drinks</h2></li>
-                    <li><h2>Desserts</h2></li>
-                    <li><h2>Sauces</h2></li>
+                    <li class="menu-list-item">
+                        <h2>Specials</h2>
+                        <p class="category-description">Description</p>
+                        <ul>
+                            <li class="dishtype-list-item">
+                                <h3>The QuickBite Special</h3>
+                                <p class="dishtype-description">Description</p>
+                                <ul>
+                                    <li class="individual-list-item">
+                                        <h4>The Brecfast bonanza</h4>
+                                        <p>description</p>
+                                    </li>
+                                    <li class="individual-list-item">
+                                        <h4>Ham & Cheese</h4>
+                                        <p>description</p>
+                                    </li>
+                                    <li class="individual-list-item">
+                                        <h4>Cajun Persuasion</h4>
+                                        <p>description</p>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-list-item">
+                        <h2>Drinks</h2>
+                        <p class="category-description">Description</p>
+                        <ul>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-list-item">
+                        <h2>Desserts</h2>
+                        <p class="category-description">Description</p>
+                        <ul>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                            <li class="individual-list-item">
+                                <h4>Milk</h4>
+                                <p>description</p>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu-list-item">
+                        <h2>Sauces</h2>
+                        <p class="dishtype-description">Description</p>
+                        <ul>
+                            <li class="dishtype-list-item">
+                                <h3>Dips</h3>
+                                <p class="category-description">description</p>
+                                <ul>
+                                    <li class="individual-list-item">
+                                        <h4>Milk</h4>
+                                        <p>description</p>
+                                    </li>
+                                    <li class="individual-list-item">
+                                        <h4>Milk</h4>
+                                        <p>description</p>
+                                    </li>
+                                    <li class="individual-list-item">
+                                        <h4>Milk</h4>
+                                        <p>description</p>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="dishtype-list-item">
+                                <h3>Dressings</h3>
+                                <p class="dishtype-description">description</p>
+                                <ul>
+                                    <li class="individual-list-item">
+                                        <h4>Milk</h4>
+                                        <p>description</p>
+                                    </li>
+                                    <li class="individual-list-item">
+                                        <h4>Milk</h4>
+                                        <p>description</p>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rutrum, leo vel cursus porta, tellus justo suscipit mi, eu aliquet sapien justo sed massa. Maecenas mattis sit amet quam eu maximus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer a tortor scelerisque, luctus augue at, interdum nisi. Suspendisse feugiat facilisis sem, ut porttitor neque facilisis sit amet. Nam magna nunc, imperdiet vitae est mollis, sodales laoreet mauris. Pellentesque et tortor nunc. Mauris nunc dui, viverra quis imperdiet ac, sollicitudin ut leo.
